# sweetviz-must

./: README.md  pyproject.toml
sweetviz/: graph.py
sweetviz/mpl_styles/: graph_base.mplstyle
sweetviz/templates/: dataframe_page.html  sv_assets.css  sweetviz.css
